quiz: Full Width Accordion

--- a/app/quiz/style.css
+++ b/app/quiz/style.css
@@ -1,4 +1,4 @@
 /* Afin que le quiz prenne toute la largeur */
-.css-1lj39kh-MuiAccordionDetails-root {
+/* .css-1lj39kh-MuiAccordionDetails-root {
     padding: 0;
-}
+} */
