--- a/app/globals.css
+++ b/app/globals.css
@@ -16,15 +16,32 @@
   }
 }
 
-body {
-  /* color: rgb(var(--foreground-rgb));
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+main {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+
+/* body {
+  color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb)); */
-}
+    rgb(var(--background-start-rgb));
+} */
 
 @layer utilities {
   .text-balance {
