--- a/components/ViewWithBorderRadius/ViewWithBorderRadius copy.css
+++ b/components/ViewWithBorderRadius/ViewWithBorderRadius copy.css
@@ -11,8 +11,7 @@
 .topView {
   width: 100%;
   height: 130px;
-  background-color: #663E94;
-  /* background-color: white; */
+  background-color: white;
 }
 
 .topChildView {
@@ -21,7 +20,6 @@
     /* background-color: #663E94; */
      background-color: #3B8FEF;
     border-bottom-right-radius: 40px;
-    border-bottom-left-radius: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,8 +35,7 @@
 .bottomChildView{
     width: 100%;
     height: 100%;
-    background-color: #663E94;
-    /* background-color: white; */
+    background-color: white;
     border-top-left-radius: 40px;
     display: flex;
     align-items: center;
