--- a/app/quiz/_style.css
+++ b/app/quiz/_style.css
@@ -143,8 +143,7 @@
 
 
 .accordionParentsSummaryStyle{
-  background-color: #264BC0;
-  /* background-color: #663E94; */
+  background-color: #663E94;
   color: #FCA4F0;
   font-size: 12px;
   font-weight: bolder;
