--- a/components/ViewWithBorderRadius/ViewWithBorderRadius.css
+++ b/components/ViewWithBorderRadius/ViewWithBorderRadius.css
@@ -37,8 +37,8 @@
 .bottomChildView{
     width: 100%;
     height: 100%;
-    background-color: #663E94;
-    /* background-color: white; */
+    /* background-color: #663E94; */
+    background-color: #264BC0;
     border-top-left-radius: 40px;
     display: flex;
     align-items: center;
