--- a/components/ViewWithBorderRadius/ViewWithBorderRadius.css
+++ b/components/ViewWithBorderRadius/ViewWithBorderRadius.css
@@ -11,7 +11,7 @@
 .topView {
   width: 100%;
   height: 130px;
-  background-color: #663E94;
+  background-color: #264BC0;
   /* background-color: white; */
 }
 
