--- a/app/styles.css
+++ b/app/styles.css
@@ -1,5 +1,5 @@
 /* Style de la barre de défilement */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
 }
 
@@ -10,10 +10,36 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #264BC0;
+} */
+
+.scrollable-content {
+  overflow-y: auto;
+  overflow-x: auto;
+  height: 300px;
+  width: 100%;
+  border-radius: 5px;
 }
+
+/* Personnalisation de la scrollbar */
+.scrollable-content::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scrollable-content::-webkit-scrollbar-track {
+  background: #3b8fef;
+}
+
+.scrollable-content::-webkit-scrollbar-thumb {
+  background: #fca4f0;
+  border-radius: 5px;
+  opacity: 0.9 ;
+}
+
+/* .scrollable-content::-webkit-scrollbar-thumb:hover {
+  background: #555;
+} */
+
 /* /Style de la barre de défilement */
-
-
 
 .givenAnswers {
   font-size: 0.85rem;
@@ -50,7 +76,8 @@
 }
 
 .correctAnswersTitle,
-.inCorrectAnswersTitle, .unansweredQuestionsTitle {
+.inCorrectAnswersTitle,
+.unansweredQuestionsTitle {
   font-size: 1rem;
   color: #fca4f0;
   border: 0.5px solid #fca4f0;
@@ -97,7 +124,7 @@
   font-size: 0.9rem;
   color: #fca4f0;
   border: 0.5px solid #fca4f0;
-  background-color: #264BC0;
+  background-color: #264bc0;
   /* background-color: #663E94; */
   padding: 0.5rem;
   line-height: 1.2rem;
@@ -132,7 +159,7 @@
 }
 
 .nextButton {
-  background-color: #3B8FEF;
+  background-color: #3b8fef;
   color: #fff;
   font-weight: bold;
   margin-right: 7px;
@@ -142,60 +169,57 @@
   background-color: #3b8fef;
 }
 
-
-.accordionParentsSummaryStyle{
-  background-color: #264BC0;
+.accordionParentsSummaryStyle {
+  background-color: #264bc0;
   /* background-color: #663E94; */
-  color: #FCA4F0;
+  color: #fca4f0;
   font-size: 12px;
   font-weight: bolder;
   width: 100%;
   /* padding: 10px; */
   margin: 0;
-  border-bottom: 0.7px solid #FCA4F0;
+  border-bottom: 0.7px solid #fca4f0;
   min-height: 32px;
   padding: 0 7px;
 }
 
-.accordionChildrenSummaryStyle{
-  background-color: #8057A6;
-  color: #E0F7FA;
+.accordionChildrenSummaryStyle {
+  background-color: #8057a6;
+  color: #e0f7fa;
   font-size: 12px;
   font-weight: bolder;
   width: 100%;
   /* padding: 10px; */
   margin: 0;
-  border-bottom: 0.7px solid #FCA4F0;
+  border-bottom: 0.7px solid #fca4f0;
   min-height: 32px;
   padding: 0 7px;
 }
-.accordionChildrenSummaryStyle .expandIconStyle{
-  color: #E0F7FA;
+.accordionChildrenSummaryStyle .expandIconStyle {
+  color: #e0f7fa;
 }
 
-.accordionGrandChildrenStyle{
+.accordionGrandChildrenStyle {
   /* background-color: #825bae; */
   /* background-color: #9970B8; */
-  color: #663E94;
+  color: #663e94;
   font-size: 12px;
   font-weight: bolder;
   width: 100%;
   /* padding: 10px; */
   margin: 0;
-  border-bottom: 0.7px solid #FCA4F0;
+  border-bottom: 0.7px solid #fca4f0;
   min-height: 32px;
   padding: 0 7px;
 }
-.expandIconStyle{
-  color:#FCA4F0;
+.expandIconStyle {
+  color: #fca4f0;
   padding: 0;
   margin: 0;
   font-size: 1.5rem;
-
 }
 
-
-.MuiBox-root{
+.MuiBox-root {
   width: 100%;
   /* margin: 0; */
   padding: 0;
@@ -203,24 +227,24 @@
   /* background-color: #3b8fef; */
 }
 
-.accordionGrandChildrenStyle .expandIconStyle{
-  color: #663E94;
+.accordionGrandChildrenStyle .expandIconStyle {
+  color: #663e94;
   padding: 0;
 }
 
-.MuiAccordion-root.Mui-expanded{
+.MuiAccordion-root.Mui-expanded {
   /* height: 22px;  */
   /* padding: 0 7px; */
   margin: 0;
 }
-.MuiAccordionSummary-root, .MuiAccordionSummary-root.Mui-expanded{
-  height: 2.5rem; 
+.MuiAccordionSummary-root,
+.MuiAccordionSummary-root.Mui-expanded {
+  height: 2.5rem;
   padding: 0 7px;
   margin: 0;
 }
 
-
-.MuiAccordionDetails-root{
+.MuiAccordionDetails-root {
   /* height: 2px;  */
   /* padding: 0 7px; */
   margin: 0;
