--- a/app/styles.css
+++ b/app/styles.css
@@ -90,10 +90,12 @@
   text-align-last: left;
   word-spacing: -0.09rem;
   font-weight: 600;
+  color: "rgb(224, 247, 250)";
+  font-size: "1rem"
 }
 
 .questionText {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: #fca4f0;
   border: 0.5px solid #fca4f0;
   background-color: #264bc0;
